Remove active profile

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # PROFILES
-#spring.profiles.active=@activatedProperties@
-spring.profiles.active=uat
+spring.profiles.active=@activatedProperties@
+#spring.profiles.active=uat
 spring.main.allow-bean-definition-overriding=true
 
 # ----------------------------------------
@@ -21,7 +21,7 @@ server.servlet.context-path=/excise-backend
 #spring.datasource.password=exciseadm
 
 # DATASOURCE - Baiwa Server
-spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
 spring.datasource.username=exciseuser
 spring.datasource.password=exciseuser
@@ -48,7 +48,6 @@ ws.excise.endpoint.ldapuser.dev=http://dexsrvint.excise.go.th:5080/LDAPGateway/L
 ws.excise.endpoint.inc.incfri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
 ws.excise.endpoint.inc.incfri8040=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8040
 ws.excise.endpoint.lic.licfri6010=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6010
-#ws.excise.endpoint.pm.system-unworking=https://dcfbf908-a79a-4a92-8978-3bce03e740ec.mock.pstmn.io/oper-report-uat/rest/getJsonSystem
 ws.excise.endpoint.pm.system-unworking=http://192.168.48.36:8080/oper-report-uat/rest/getJsonSystem
 ws.excise.endpoint.pm.py1=http://192.168.48.36:8080/excise-pm/rest/getJsonPy1
 ws.excise.endpoint.pm.py2=http://192.168.48.36:8080/excise-pm/rest/getJsonPy2
