--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -59,6 +59,9 @@ ws.excise.endpoint.reg.regfri4000=http://webtest.excise.go.th/EDAuditServicesUAT
 ws.excise.endpoint.ana.anafri0001=http://webtest.excise.go.th/EDAuditServicesUAT/ana/AnaFri0001
 ws.excise.endpoint.oas.oasfri0100=http://webtest.excise.go.th/EDRestServicesUAT/oas/OASFRI0100
 
+
+ws.excise.endpoint.exciseuserinformation=http://webtest.excise.go.th/EDRestServicesUAT/sso/ExciseUserInfomation 
+
 ############## SYSTEM UNWORKING BATCH JOB #################
 #### Specific day 1 of month   = * 0 0 1 * ? *
 #### day Test 2 m =0 0/2 * 1/1 * ? *
