--- a/workspace/ims-webapp/src/main/resources/application-dev.properties
+++ b/workspace/ims-webapp/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:oracle:thin:@baiwadev.thddns.net:9441:orcl
+spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.1.117:1521:orcl
 spring.datasource.username=exciseOffice
 spring.datasource.password=exciseOffice
 
