--- a/workspace/ims-webapp/src/main/resources/application-devuat.properties
+++ b/workspace/ims-webapp/src/main/resources/application-devuat.properties
@@ -1,7 +1,4 @@
-#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-#spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.1.117:1521:orcl
-
-spring.datasource.driverClassName=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.3.40:1521:db3uat3
 spring.datasource.username=imsuser
 spring.datasource.password=uimsuser
