--- a/workspace/ims-webapp/src/main/resources/application-prod.properties
+++ b/workspace/ims-webapp/src/main/resources/application-prod.properties
@@ -1,5 +1,14 @@
-spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.3.70:1521:excisedb
-spring.datasource.username=exciseadm
-spring.datasource.password=exciseadm
+# ----------------------------------------
+# DATA PROPERTIES
+# ----------------------------------------
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@192.168.3.40:1521:db3uat3
+spring.datasource.username=imsuser
+spring.datasource.password=uimsuser
 
+# WEB SERVICES
+# LDAP
+ws.excise.endpoint.ldapuser.dev=http://dexsrvint.excise.go.th:5080/LDAPGateway/LDPAGAuthenAndGetUserRoleService
+
+# APP CONFIGURE
+app.path.upload=/opt/imsapp/upload/
