--- a/workspace/ims-webapp/src/main/resources/application-uat.properties
+++ b/workspace/ims-webapp/src/main/resources/application-uat.properties
@@ -1,12 +1,14 @@
-#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-#spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.1.117:1521:orcl
-
-spring.datasource.driverClassName=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.3.40:1521:db3uat3
+# ----------------------------------------
+# DATA PROPERTIES
+# ----------------------------------------
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@192.168.3.40:1521:db3uat3
 spring.datasource.username=imsuser
 spring.datasource.password=uimsuser
-app.path.upload=/opt/imsapp/upload/
 
+# WEB SERVICES
+# LDAP
 ws.excise.endpoint.ldapuser.dev=http://dexsrvint.excise.go.th:5080/LDAPGateway/LDPAGAuthenAndGetUserRoleService
 
-user.list.test=admin,ta001401,ta001402,ta001403,ia000100
+# APP CONFIGURE
+app.path.upload=/opt/imsapp/upload/
