--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -13,23 +13,10 @@ server.servlet.context-path=/excise-backend
 # DATA PROPERTIES
 # ----------------------------------------
 # DATASOURCE - Office
-#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@192.168.1.117:1521:orcl
-#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-#spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.1.117:1521:orcl
-#spring.datasource.username=exciseadm
-#spring.datasource.password=exciseadm
-
-# DATASOURCE - Baiwa Server
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
-spring.datasource.username=exciseuser
-spring.datasource.password=exciseuser
-
-#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-#spring.datasource.url=jdbc:p6spy:oracle:thin:@baiwadev.thddns.net:9441:orcl
-#spring.datasource.username=exciseOffice
-#spring.datasource.password=exciseOffice
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.url=jdbc:p6spy:oracle:thin:@baiwadev.thddns.net:9441:orcl
+spring.datasource.username=exciseOffice
+spring.datasource.password=exciseOffice
 
 # WEB SERVICES
 # Master Data
@@ -44,6 +31,7 @@ ws.excise.endpoint.rdb.inquiry-title=http://webtest.excise.go.th/EDRestServicesU
 ws.excise.endpoint.reg.inquiry-offcode-address=http://webtest.excise.go.th/EDRestServicesUAT/reg/InquiryOffcodeAddress
 # LDAP
 ws.excise.endpoint.ldapuser.dev=http://dexsrvint.excise.go.th:5080/LDAPGateway/LDPAGAuthenAndGetUserRoleService
+ws.excise.endpoint.exciseuserinformation=http://webtest.excise.go.th/EDRestServicesUAT/sso/ExciseUserInfomation
 # Internal Audit
 ws.excise.endpoint.inc.incfri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
 ws.excise.endpoint.inc.incfri8040=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8040
@@ -58,24 +46,20 @@ ws.excise.endpoint.inc.incfri8000=http://webtest.excise.go.th/EDAuditServicesUAT
 ws.excise.endpoint.reg.regfri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
 ws.excise.endpoint.ana.anafri0001=http://webtest.excise.go.th/EDAuditServicesUAT/ana/AnaFri0001
 ws.excise.endpoint.oas.oasfri0100=http://webtest.excise.go.th/EDRestServicesUAT/oas/OASFRI0100
-
-
-ws.excise.endpoint.exciseuserinformation=http://webtest.excise.go.th/EDRestServicesUAT/sso/ExciseUserInfomation 
-
-############## SYSTEM UNWORKING BATCH JOB #################
-#### Specific day 1 of month   = * 0 0 1 * ? *
-#### day Test 2 m =0 0/2 * 1/1 * ? *
-system.unworking.job.cronExpressions=0 0 0 1 1/1 ? *
-license.list.job.cronExpressions=0 0 0 1 1/1 ? *
-
+# WebService Authentication
 ws.excise.system-id=WSS
 ws.excise.ip-address=192.168.160.67
 ws.excise.username=wss001
 ws.excise.password=123456
 
-# APP CONFIGURE
-application.env=
-application.swagger.enable=true
+############## SYSTEM UNWORKING BATCH JOB #################
+#### Specific day 1 of month   = * 0 0 1 * ? *
+#### day Test 2 m =0 0/2 * 1/1 * ? *
+#system.unworking.job.cronExpressions=0 0 0 1 1/1 ? *
+#license.list.job.cronExpressions=0 0 0 1 1/1 ? *
 
-app.path.upload=C:/Baiwa/upload
-user.list.test=admin,ta001401,ta001402,ta001403,ia000100
+# APP CONFIGURE
+application.swagger.enable=true
+application.timeout=30
+
+app.path.upload=/tmp/excise/ims/upload/
