AuditLog Update Case SessionTimeout

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.main.allow-bean-definition-overriding=true
 # ----------------------------------------
 # EMBEDDED SERVER CONFIGURATION
 server.servlet.context-path=/excise-backend
+server.servlet.session.timeout=30m
 
 # ----------------------------------------
 # DATA PROPERTIES
@@ -60,6 +61,5 @@ ws.excise.password=123456
 
 # APP CONFIGURE
 application.swagger.enable=true
-application.timeout=30
 
 app.path.upload=/tmp/excise/ims/upload/
