Update WS RegP0101

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -47,6 +47,7 @@ ws.excise.endpoint.inc.incfri8000=http://webtest.excise.go.th/EDAuditServicesUAT
 ws.excise.endpoint.reg.regfri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
 ws.excise.endpoint.ana.anafri0001=http://webtest.excise.go.th/EDAuditServicesUAT/ana/AnaFri0001
 ws.excise.endpoint.oas.oasfri0100=http://webtest.excise.go.th/EDRestServicesUAT/oas/OASFRI0100
+ws.excise.endpoint.ims.reg-p0101=http://192.168.48.36:8080/excise-ims/rest/getJsonRegP0101
 # WebService Authentication
 ws.excise.system-id=WSS
 ws.excise.ip-address=192.168.160.67
