Update Configure Prod

--- a/workspace/ims-webapp/src/main/resources/application-prod.properties
+++ b/workspace/ims-webapp/src/main/resources/application-prod.properties
@@ -2,13 +2,14 @@
 # DATA PROPERTIES
 # ----------------------------------------
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.3.40:1521:db3uat3
+spring.datasource.url=jdbc:oracle:thin:@edrac-excise.go.th:1521/eddb2p
 spring.datasource.username=imsuser
-spring.datasource.password=uimsuser
+spring.datasource.password=p01imsuser
 
 # WEB SERVICES
 # LDAP
 ws.excise.endpoint.ldapuser.dev=http://dexsrvint.excise.go.th:5080/LDAPGateway/LDPAGAuthenAndGetUserRoleService
+ws.excise.endpoint.exciseuserinformation=http://web.excise.go.th/EDRestServices/sso/ExciseUserInfomation
 
 # APP CONFIGURE
 app.path.upload=/opt/imsapp/upload/
