--- a/workspace/tabatch001/pom.xml
+++ b/workspace/tabatch001/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>th.go.excise</groupId>
-	<artifactId>ims-jobschedule</artifactId>
+	<artifactId>tabatch001</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
