--- a/workspace/ims-webapp/src/main/resources/application-prod.properties
+++ b/workspace/ims-webapp/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@
 # DATA PROPERTIES
 # ----------------------------------------
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@10.10.100.21:1521:eddb2p
+#spring.datasource.url=jdbc:oracle:thin:@10.10.100.21:1521:eddb2p2
 #spring.datasource.username=imsuser
 #spring.datasource.password=p01imsuser
 spring.datasource.jndi-name=jdbc.imsDS
